[WK2][EFL][WTR] Regression(r141836): WTR crashes on exit https://bugs.webkit.org/show_bug.cgi?id=109456

Reviewed by Anders Carlsson.

Source/WebKit2:

WebView destructor now considers the situation if its WebPageProxy
instance had been closed from outside the class (explicitly
by client code).

* UIProcess/efl/WebView.cpp:
(WebKit::WebView::~WebView):

Tools:

WebView instance must not live longer than EwkView, as EwkView owns
objects that page proxy refers to, doing otherwise leads to a crash.

Test controller has own ptr containing WebView. Invoking of ewk_shutdown()
leads to evas objects deletion. So, the problem was that test controller was
deleted after ewk_shutdown() had been called in main() function causing
crashes on WTR exit.

The patch introduces a scope for test controller so that it is deleted first.

* WebKitTestRunner/efl/main.cpp:
(main):


Canonical link: https://commits.webkit.org/127968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142748 268f45cc-cd09-0410-ab3c-d52691b4dbfc